Fix Safari spacing issue in promo component

--- a/css/_components.promo.scss
+++ b/css/_components.promo.scss
@@ -17,14 +17,11 @@
 
     .promo__links {
         text-align: center;
+    }
 
+    .promo__links-spacer {
         @include media-query(lap-and-up) {
-            word-spacing: 1.5em;
-
-            > .btn {
-                word-spacing: normal;
-            }
-
+            padding-right: 1.5em;
+            padding-left: 1.5em;
         }
-
     }
